--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
               injected humour, or randomised words which don't look even
               slightly believable.
             </p>
-            <button class="btn-secondary font-semibold">Show All</button>
+            <button class="bg-white font-semibold rounded-lg"><p class="btn-secondary">Show All</p></button>
           </div>
 
           <div class="relative space-y-9 p-10 md:p-0">
